--- a/popup.html
+++ b/popup.html
@@ -298,7 +298,7 @@
                             <div class="details-container">
                                 <div class="state">
                                     <div>
-                                        <span class="me-2">State<em>*</em> <span class="info">i</span> <span class="info-detail">abbreviation:PA, NY, CA<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" height="20" width="20"><path d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"/></svg> </span></span>
+                                        <span class="me-2">State<em>*</em> <span class="info">i</span> <span class="info-detail">Abbreviation: <br> PA, NY, CA<svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 320 512" height="20" width="20"><path d="M310.6 150.6c12.5-12.5 12.5-32.8 0-45.3s-32.8-12.5-45.3 0L160 210.7 54.6 105.4c-12.5-12.5-32.8-12.5-45.3 0s-12.5 32.8 0 45.3L114.7 256 9.4 361.4c-12.5 12.5-12.5 32.8 0 45.3s32.8 12.5 45.3 0L160 301.3 265.4 406.6c12.5 12.5 32.8 12.5 45.3 0s12.5-32.8 0-45.3L205.3 256 310.6 150.6z"/></svg> </span></span>
                                     </div>
                                     <div>
                                         <input type="text" class="form-control req-input" name="state" id="state">
